cluster/apps/cert-manager/networkpolicies/cert-manager-webhook.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: webhook
      app.kubernetes.io/component: webhook
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "6080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: kustomize-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "10250" # validationwebhook
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: cert-manager
            app.kubernetes.io/name: startupapicheck
            app.kubernetes.io/component: startupapicheck
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
