cluster/apps/cert-manager/networkpolicies/prometheus-egress-cert-manager.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-cert-manager
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: cert-manager
            app.kubernetes.io/name: cert-manager
            "k8s:io.kubernetes.pod.namespace": cert-manager
        - matchLabels:
            app.kubernetes.io/instance: cert-manager
            app.kubernetes.io/name: cainjector
            app.kubernetes.io/component: cainjector
            "k8s:io.kubernetes.pod.namespace": cert-manager
        - matchLabels:
            app.kubernetes.io/instance: cert-manager
            app.kubernetes.io/name: webhook
            app.kubernetes.io/component: webhook
            "k8s:io.kubernetes.pod.namespace": cert-manager
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
